#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([sglib-script],[0.2],[ezander@tu-bs.de])
AC_REVISION([$Id: configure.ac 124 2007-08-15 12:37:53Z ezander $])
AM_INIT_AUTOMAKE([-Wall foreign])

#AC_CONFIG_AUX_DIR([build-aux])
#AC_CONFIG_SRCDIR([.])

# Checks for programs.

# own stuff (need to check where it should go...)
# AM_DEBUGGING

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Specify files to configure

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([run_with], [chmod +x run_with])
AC_CONFIG_FILES([sg_path.m])

# Write configure script
AC_OUTPUT

